--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -6,79 +6,30 @@ description: Tools and resources to sharpen members’ knowledge and skills.
 categories:
 - programs
 ---
-<h2>Program Overview</h2>
-
-<p>
-The YEP Career Development Program provides a platform that supports members in their career development journey, 
+<div class="content">
+      <div class="container">
+          <div class="row">
+               <div class="col-sm-7 col-md-7">
+                  <h2>Program Overview</h2>
+<p>The YEP Career Development Program provides a platform that supports members in their career development journey, 
 from exploring and gaining employment through progressing towards individual career goals. 
 YEP organizes various programs and events such as guest speakers series, panel discussions and 
 virtual webcasts on career development topics. We also organize resume and cover letter writing workshops and 
-mock interview sessions where members can gain tailored and valuable feedback.
-</p>
+mock interview sessions where members can gain tailored and valuable feedback.</p>
 
 <h2>Program Mission</h2>
 
-<p>
-Provide a platform where members can develop and enhance skill sets and knowledge to gain employment, and continue to design and achieve career goals after joining the workforce.
-</p>
+<p>Provide a platform where members can develop and enhance skill sets and knowledge to gain employment, and continue to design and achieve career goals after joining the workforce.</p>
 
 <h2>Program Offerings</h2>
 
-<p>
-If you are a job seeker, know of a job opening or have suggestions for the future events, we would love to hear from you!
-</p>
+<p>If you are a job seeker, know of a job opening or have suggestions for the future events, we would love to hear from you!</p>
 
-<p>
-Job Seekers: Are you looking for a job or just starting out on your career? Career Development Program can help you with your job search! Through partnerships with recruiters, jobs advertisements by YEP members and online job search tools, we will work to help match you with compatible opportunities. Fill out this form for job seekers and we will contact you within a week. Altough we CaN NOT guarantee employment, the aim of this program is to help expose you to available opportunities.
-</p>
+<p>Job Seekers: Are you looking for a job or just starting out on your career? Career Development Program can help you with your job search! Through partnerships with recruiters, jobs advertisements by YEP members and online job search tools, we will work to help match you with compatible opportunities. Fill out this form for job seekers and we will contact you within a week. Altough we CaN NOT guarantee employment, the aim of this program is to help expose you to available opportunities.</p>
 
-<p>
-Job Advertisers: Do you have a job opportunity you want to share with YEP members? You can let us know using two ways: email the Program team with the direct website link to the job description or fill out this form to let us know more about it. 
-</p> 
+<p>Job Advertisers: Do you have a job opportunity you want to share with YEP members? You can let us know using two ways: email the Program team with the direct website link to the job description or fill out this form to let us know more about it. </p> 
 
-<p>
-Feedback for the Career Development Program: We would love to hear your feedback on what programs and events will provide you more value on your career path. Please let us know by filling out our Survey, where you can also indicate if you have information or skills you would like to share as well!  
-</p> 
-
-<h2>Career Program Calendar</h2>
-
-<p>
-Here you will be able to see the list of events that the Career Development Programs has planned for the next two months.
-</p>
-
-<div class="margin-top-2 margin-bottom-2">
-  
-<h2>Upcoming Events</h2>
-
-<p>
-March 2018: Career Series Part II (Digital)
-</p>
-
-<p>
-Learning on the job (training/skill building), performance evaluations, asking for a promotion, networking on the job and finding a mentor at work.
-</p>
-
-<p>
-Job Fair
-</p>
-
-<p>
-May 2018: Career Series Part III (Digital)
-</p>
-
-<p>
-Changing careers, building and highlighting transferable skills, managing others
-</p>
-
-<h2>Past Events</h2>
-
-<p>
-January 2018: Career Series Part I 
-</p>
-
-<p>
-Writing Resumes and Cover Letters, Personal Branding, Interview Prep, Salary Negotiations and Transitioning into the workforce 
-</p>
+<p>Feedback for the Career Development Program: We would love to hear your feedback on what programs and events will provide you more value on your career path. Please let us know by filling out our Survey, where you can also indicate if you have information or skills you would like to share as well!</p> 
 
 <h2>Additional Resources</p>
 
@@ -130,3 +81,29 @@ https://www.bls.gov/ooh/
   <li>http://www.vault.com/</li>
   <li>https://www.themuse.com/</li>
 </ul>
+</div>
+       <div class="col-sm-5 col-md-4 col-md-offset-1">
+         <aside class="sidebar">
+                                                                                    
+   <div class="well">
+    <h2>Mission </h2>
+    <p> Our Mission is to inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
+    <hr>
+    <h2> Vision</h2>
+      <p> Our Vision is to create a strong community that shares ideas, skills and resources to enrich lives.</p>                              <hr>
+      <h2>Our Programs</h2>
+      <li>Career Development </li>
+      <li>Personal and Professional Empowerment </li>
+      <li>Mentorship </li>
+      <li>Recent Arrivals</li>
+      <li>Diaspora and Community Engagement</li>
+    <hr>
+     <h2>Contact</h2>                          
+     <a href="mailto:info@yepnetwork.org">info@yepnetwork.org</a>
+ </p>
+      </div>
+          </aside>
+            </div>
+            </div><!-- /.row -->
+            </div><!--/.container-->
+        </div><!-- /.content -->
