--- a/_programs/personal-professional-empowerment.html
+++ b/_programs/personal-professional-empowerment.html
@@ -42,3 +42,25 @@ Personal and Professional Empowerment &nbsp;is about looking at who you are and 
 		<li>Leadership - Place holder.&nbsp; All the above sessions will have workshops and speaker.&nbsp;&nbsp;Hence, for now, I would like to hold this even as a place holder till the events are outlined and time has been located to make sure these sessions are being conducted efficiently&nbsp;</li>
 	</ol>
 </div>
+<div class="well">
+    <h2>Mission </h2>
+    <p> Our Mission is to inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
+    <hr>
+    <h2> Vision</h2>
+      <p> Our Vision is to create a strong community that shares ideas, skills and resources to enrich lives.</p>                              <hr>
+      <h2>Our Programs</h2>
+      <li>Career Development </li>
+      <li>Personal and Professional Empowerment </li>
+      <li>Mentorship </li>
+      <li>Recent Arrivals</li>
+      <li>Diaspora and Community Engagement</li>
+    <hr>
+     <h2>Contact</h2>                          
+     <a href="mailto:info@yepnetwork.org">info@yepnetwork.org</a>
+ </p>
+      </div>
+          </aside>
+            </div>
+            </div><!-- /.row -->
+            </div><!--/.container-->
+        </div><!-- /.content -->
