--- a/_programs/personal-professional-empowerment.html
+++ b/_programs/personal-professional-empowerment.html
@@ -8,12 +8,11 @@ categories:
 - programs
 featured: true
 ---
-Personal and Professional Empowerment &nbsp;is about looking at who you are and becoming more aware of yourself as a unique individual. Personal empowerment involves developing the confidence and strength to set realistic goals and fulfil your potential.&nbsp;Everyone has strengths and weaknesses and a range of skills that are used in everyday situations, but all too often people remain unaware of, or undervalue, their true abilities.
-
 <div class="content">
       <div class="container">
           <div class="row">
                <div class="col-sm-7 col-md-7">
+<p>Personal and Professional Empowerment &nbsp;is about looking at who you are and becoming more aware of yourself as a unique individual. Personal empowerment involves developing the confidence and strength to set realistic goals and fulfil your potential.&nbsp;Everyone has strengths and weaknesses and a range of skills that are used in everyday situations, but all too often people remain unaware of, or undervalue, their true abilities.</p>
 	<h3>Guide</h3>
 	<ol start="1" type="1">
 		<li>Communication -&nbsp;The ability to communicate effectively with superiors, colleagues, and family/friends is essential. This workshop will work on augmenting the skills that are needed to excel in communications.&nbsp;
