--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -10,81 +10,26 @@ categories:
       <div class="container">
           <div class="row">
                <div class="col-sm-7 col-md-7">
-<p>The YEP Career Development Program provides a platform that supports members in their career development journey, 
-from exploring and gaining employment through progressing towards individual career goals. 
-YEP organizes various programs and events such as guest speakers series, panel discussions and 
-virtual webcasts on career development topics. We also organize resume and cover letter writing workshops and 
-mock interview sessions where members can gain tailored and valuable feedback.</p>
-
-<h2>Program Mission</h2>
-
-<p>Provide a platform where members can develop and enhance skill sets and knowledge to gain employment, and continue to design and achieve career goals after joining the workforce.</p>
-
-<h2>Program Offerings</h2>
-
-<p>If you are a job seeker, know of a job opening or have suggestions for the future events, we would love to hear from you!</p>
-
-<p>Job Seekers: Are you looking for a job or just starting out on your career? Career Development Program can help you with your job search! Through partnerships with recruiters, jobs advertisements by YEP members and online job search tools, we will work to help match you with compatible opportunities. Fill out this form for job seekers and we will contact you within a week. Altough we CaN NOT guarantee employment, the aim of this program is to help expose you to available opportunities.</p>
-
-<p>Job Advertisers: Do you have a job opportunity you want to share with YEP members? You can let us know using two ways: email the Program team with the direct website link to the job description or fill out this form to let us know more about it. </p> 
-
-<p>Feedback for the Career Development Program: We would love to hear your feedback on what programs and events will provide you more value on your career path. Please let us know by filling out our Survey, where you can also indicate if you have information or skills you would like to share as well!</p> 
-
-       <div class="col-sm-6 col-md-6 col-md-offset-1">
+                  <h1>Interested in Sponsoring YEP?</h1>
+<p>Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p>
+        <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
+                    
+    </div>
+       <div class="col-sm-5 col-md-4 col-md-offset-1">
          <aside class="sidebar">
                                                                                     
    <div class="well">
-    <h2>Additional Resources</p>
-
-<h3>Quintessential Careers</h3>
-
-<p>
-A career, job, and college site offering free career and job-hunting advice (through articles, tools, tips, samples, and tutorials), as well as serving as a directory of links to all job sites.
-</p>
-
-https://www.livecareer.com/quintessential/
-
-<h3>The Bureau of Labor Statistics</h3>
-
-<p>The official governmental agency responsible for collecting and analyzing occupational information, is a great place to find comprehensive information on occupations and their requirements. You can search occupational information by several different criteria such as education level, wages, job growth etc... The information available on the website is produced and updated every two years.</p>
-
-https://www.bls.gov/ooh/
-
-
-<h3>Professional Clothing</h3>
-
-<p>Dressing for success doesn’t have to break your bank! There are multiple non-profit organizations in Washington metro area that provide professional clothes and other services such as interview counseling.</p>
-
-<ul>
-  <li>http://www.successinstyle.org/</li>
-  <li>http://www.acdnonline.org/locations/</li>
-</ul>
-
-<h2>Websites that offer useful tips and guides:</h2>
-
-<h3>Resume writing:</h3>
-
-<ul>
-  <li>http://www.rawresume.com/</li>
-  <li>http://www.resumewritingacademy.com/resume-writer-resources.php</li>
-</ul>
-
-<h3>Interview preparation:</h3>
-
-<ul>
-  <li>https://www.thebalance.com/practice-interview-tips-and-techniques-2062805</li>
-  <li>https://www.monster.com/career-advice/job-interview</li>
-  <li>http://myinterviewsimulator.com/</li>
-</ul>
-
-<h3>Researching employers:</h3>
-
-<ul>
-  <li>https://www.glassdoor.com/index.htm</li>
-  <li>http://www.vault.com/</li>
-  <li>https://www.themuse.com/</li>
-</ul>
-</div>
+    <h2>Mission </h2>
+    <p> Our Mission is to inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
+    <hr>
+    <h2> Vision</h2>
+      <p> Our Vision is to create a strong community that shares ideas, skills and resources to enrich lives.</p>                              <hr>
+      <h2>Our Programs</h2>
+      <li>Career Development </li>
+      <li>Personal and Professional Empowerment </li>
+      <li>Mentorship </li>
+      <li>Recent Arrivals</li>
+      <li>Diaspora and Community Engagement</li>
     <hr>
      <h2>Contact</h2>                          
      <a href="mailto:info@yepnetwork.org">info@yepnetwork.org</a>
