--- a/_programs/recent-arrival.html
+++ b/_programs/recent-arrival.html
@@ -7,290 +7,37 @@ description: Offer sustainable resettlement programs and mobilize community lead
 categories:
 - programs
 ---
-<h3>Newcomer</h3>
-
-<p>A newcomer is an individual that has migrated to the United States. &nbsp;</p>
-
-<ul>
-  <li>
-  <p>Individuals of Ethiopian descent who have recently arrived to the United States of America</p>
-  </li>
-  <li>
-  <p>Individuals who are just starting a new life in the United States America</p>
-  </li>
-  <li>
-  <p>Individuals who have moved to the United States America with the intent to work or reside for more than one year.</p>
-  </li>
-  <li>
-  <p>Individuals who had limited or no access to the United States of America social, economic and professional lifestyle</p>
-  </li>
-  <li>
-  <p>Individuals who recently left Ethiopia and are looking to settle in the United States of America</p>
-  </li>
-  <li>
-  <p>Individuals who are new to the Washington D.C. tristate area.</p>
-  </li>
-  <li>
-  <p>Individual must have been in the United States of America less than three to five years.</p>
-  </li>
-</ul>
-
-<h3>Vision</h3>
-
-<p>Your Ethiopian Professional’s Newcomer Program focuses on helping those we serve learn and thrive in their new communities.</p>
-
-<h3>Mission</strong></h3>
-
-<p>This Newcomer Program initiative attempts to offer sustainable resettlement programs and mobilize community leaders to offer these professional services that are necessary for our new residents.&nbsp;</p>
-
-<h3>Newcomer Program Goals</h3>
-
-<p>The Newcomer Program aims to work towards the following goals:</p>
-
-<ul>
-  <li>
-  <p>To serve as a resource and work in three vital areas of need.</p>
-
-  <ul>
-    <li>
-    <p>Educational Assistance Program</p>
-    </li>
-    <li>
-    <p>Cultural Programs</p>
-    </li>
-    <li>
-    <p>Community Partnerships</p>
-    </li>
-  </ul>
-  </li>
-  <li>
-  <p>To create partnerships and working relationships with community organizations that offer services in education, cultural and legal affairs.</p>
-  </li>
-  <li>
-  <p>To ensure that program resources integrate with community needs.</p>
-  </li>
-</ul>
-
-<p><strong>Educational Program</strong></p>
-
-<ul>
-  <li>
-  <p>Goal: to serve as a resource and provide a platform for learning.</p>
-  </li>
-  <li>
-  <p>Action:</p>
-
-  <ul>
-    <li>
-    <p>Provide educational resource guides</p>
-    </li>
-    <li>
-    <p>Partner with educational firms to provide necessary classes.</p>
-    </li>
-  </ul>
-  </li>
-  <li>
-  <p>Inputs: Resource content, printing needs, ESL tutors, and performance space</p>
-  </li>
-  <li>
-  <p>Activities:</p>
-
-  <ul>
-    <li>
-    <p>Pass out resource guides (kit) at Empower Event,</p>
-    </li>
-    <li>
-    <p>Weekly/ monthly courses, TBD</p>
-
-    <ul>
-      <li>
-      <p>Course Example: - English as a Second Language</p>
-      </li>
-    </ul>
-    </li>
-  </ul>
-  </li>
-  <li>
-  <p>Outputs: 200+ individuals served annually</p>
-  </li>
-  <li>
-  <p>Outcomes:</p>
-
-  <ul>
-    <li>
-    <p>Long Term</p>
-
-    <ul>
-      <li>
-      <p>Increase YEP’s program exposure and value in the community.</p>
-      </li>
-      <li>
-      <p>Increase educational knowledge, benefits, and accessibility in the community.</p>
-      </li>
-      <li>
-      <p>Encourage sense of community and social discourse.</p>
-      </li>
-    </ul>
-    </li>
-    <li>
-    <p>Short Term</p>
-
-    <ul>
-      <li>
-      <p>Newcomer individuals get information on the educational resources they need.</p>
-      </li>
-      <li>
-      <p>Newcomer Program impact and exposure.</p>
-      </li>
-      <li>
-      <p>Newcomer Program gets more referrals.</p>
-      </li>
-    </ul>
-    </li>
-  </ul>
-  </li>
-  <li>
-  <p><strong>Cultural Program</strong></p>
-
-  <ul>
-    <li>
-    <p>Goal: to provide a platform for newcomer individuals (or group) to get access to information and perform activities that will make their acculturation process more successful.</p>
-    </li>
-    <li>
-    <p>Action: create cultural activities, creative group outings and panels</p>
-    </li>
-    <li>
-    <p>Inputs: volunteers, performance space, video editing, developing content, printing needs, and communication needs</p>
-    </li>
-    <li>
-    <p>Activities:</p>
-
-    <ul>
-      <li>
-      <p>Monthly Group Activities - Host events, like Happy hours, cultural tours, museums strolls, etc</p>
-      </li>
-      <li>
-      <p>Quarterly Panels – discussing cultural nuances and hot topics</p>
-
-      <ul>
-        <li>
-        <p>Topic Example: - “The Importance of Body Language”, “importance of Eye Contact”</p>
-        </li>
-      </ul>
-      </li>
-    </ul>
-    </li>
-    <li>
-    <p>Outputs: 200+ newcomer individuals served annually</p>
-    </li>
-    <li>
-    <p>Outcomes:</p>
-
-    <ul>
-      <li>
-      <p>Long Term</p>
-
-      <ul>
-        <li>
-        <p>Increase YEP’s program exposure and value in the community.</p>
-        </li>
-        <li>
-        <p>Increase knowledge in the cultural nuances that exist between the two cultures.</p>
-        </li>
-        <li>
-        <p>Encourage sense of community and social discourse.</p>
-        </li>
-      </ul>
-      </li>
-      <li>
-      <p>Short Term</p>
-
-      <ul>
-        <li>
-        <p>Newcomer individuals understand the American cultural expectations.</p>
-        </li>
-        <li>
-        <p>Newcomer Program impact and exposure.</p>
-        </li>
-        <li>
-        <p>Newcomer Program gets more referrals</p>
-        </li>
-      </ul>
-      </li>
-    </ul>
-    </li>
-  </ul>
-  </li>
-  <li>
-  <p><strong>Community Partnerships - Legal</strong></p>
-
-  <ul>
-    <li>
-    <p>Goal: to provide a safe space for newcomer individuals (or group) to get legal support and guidance.</p>
-    </li>
-    <li>
-    <p>Action: partner with local legal firms to provide, facilitate and structure legal support.</p>
-    </li>
-    <li>
-    <p>Inputs: legal firms, immigration lawyers, resource content, printing needs and performance space</p>
-    </li>
-    <li>
-    <p>Activities:</p>
-
-    <ul>
-      <li>
-      <p>Pass out legal resource guides at events, and have available online.</p>
-      </li>
-      <li>
-      <p>Quarterly legal sessions (one on one, panel discussion, public forums) covering FYI topics.</p>
-
-      <ul>
-        <li>
-        <p>Topic Example: - “What are your rights as a H1B Visa holder?”</p>
-        </li>
-      </ul>
-      </li>
-    </ul>
-    </li>
-    <li>
-    <p>Outputs: 100 newcomer individuals served annually.</p>
-    </li>
-    <li>
-    <p>Outcomes:</p>
-
-    <ul>
-      <li>
-      <p>Long Term</p>
-
-      <ul>
-        <li>
-        <p>Increase YEP’s program exposure and value in the community.</p>
-        </li>
-        <li>
-        <p>Increase legal knowledge and accessibility in the community.</p>
-        </li>
-        <li>
-        <p>Encourage sense of community and social discourse.</p>
-        </li>
-      </ul>
-      </li>
-      <li>
-      <p>Short Term</p>
-
-      <ul>
-        <li>
-        <p>Newcomer individuals get the legal assistance they need.</p>
-        </li>
-        <li>
-        <p>Newcomer Program impact and exposure.</p>
-        </li>
-        <li>
-        <p>Newcomer Program gets more referrals.</p>
-        </li>
-      </ul>
-      </li>
-    </ul>
-    </li>
-  </ul>
-  </li>
-</ul>
+<div class="content">
+      <div class="container">
+          <div class="row">
+               <div class="col-sm-7 col-md-7">
+                  <h1>Interested in Sponsoring YEP?</h1>
+<p>Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p>
+        <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
+                    
+    </div>
+       <div class="col-sm-5 col-md-4 col-md-offset-1">
+         <aside class="sidebar">
+                                                                                    
+   <div class="well">
+    <h2>Mission </h2>
+    <p> Our Mission is to inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
+    <hr>
+    <h2> Vision</h2>
+      <p> Our Vision is to create a strong community that shares ideas, skills and resources to enrich lives.</p>                              <hr>
+      <h2>Our Programs</h2>
+      <li>Career Development </li>
+      <li>Personal and Professional Empowerment </li>
+      <li>Mentorship </li>
+      <li>Recent Arrivals</li>
+      <li>Diaspora and Community Engagement</li>
+    <hr>
+     <h2>Contact</h2>                          
+     <a href="mailto:info@yepnetwork.org">info@yepnetwork.org</a>
+ </p>
+      </div>
+          </aside>
+            </div>
+            </div><!-- /.row -->
+            </div><!--/.container-->
+        </div><!-- /.content -->
