--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -17,6 +17,11 @@ body_class: donate
 
 <div id="post-41365" class="post-41365 page type-page status-publish hentry">
  -->
+<div class="bg-gray overview">
+  <section class="sub-navigation">
+    <div class="container">
+      <ul class="nav nav-tabs">
+        <li class="active"><a data-toggle="tab" href="#menu1">Donate</a></li>
     <div class="content">
       <div class="container">
           <div class="row">
@@ -37,8 +42,12 @@ Use the buttons below to make your donation today.
                         </div>
             <div class="col-sm-5 col-md-4 col-md-offset-1">
                           <aside class="sidebar">
+    <li><a data-toggle="tab" href="#menu2">Sponsorship</a></li>
+      </ul>
+  </div>
+  </div>                        
                                                                                     
-   <div class="well">
+   <!-- <div class="well">
     <h2>Mission </h2>
     <p> Our Mission is to inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
     <hr>
