--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -4,6 +4,42 @@ title: Donate
 permalink: /donate/
 body_class: donate
 ---
+
+<div class="bg-gray overview">
+  <section class="sub-navigation">
+    <div class="container">
+      <ul class="nav nav-tabs">
+        <li class="active"><a data-toggle="tab" href="#menu1">Donate</a></li>
+        <li><a data-toggle="tab" href="#menu2">Sponsorship</a></li>
+      </ul>
+        <div class="tab-content">
+        <div id="menu1" class="tab-pane fade in active">
+          <div class="row margin-top-2">
+             script src="https://donorbox.org/widget.js" paypalExpress="true"></script><iframe src="https://donorbox.org/embed/donate-398" height="685px" width="100%"
+ style="max-width:500px; min-width:310px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>
+  <p>Your payment is protected through SSL encryption.</p>
+     <hr/>
+    <p>
+      YEP is tax exempt under Section 501(C)(3) of the IRS code. All donations are tax deductible per U.S. code using the tax ID number 46-2681571
+     </p>    
+                
+                        </div>
+                  </div>
+                </div>
+          </div>
+        </div>
+        <div id="menu2" class="tab-pane fade">
+          <div class="row margin-top-2">
+          
+                    h1>Interested in Sponsoring YEP?</h1>
+<p>Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p>
+        <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
+      </div>              
+    </div>
+  </section>
+</div>
+
+
 <!-- <div class="container">
   <div class="row">
     <div class="col-sm-12">
@@ -16,7 +52,6 @@ body_class: donate
 </div>
 
 <div id="post-41365" class="post-41365 page type-page status-publish hentry">
- -->
 <div class="bg-gray overview">
   <section class="sub-navigation">
     <div class="container">
