--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -4,6 +4,10 @@ title: Donate
 permalink: /donate/
 body_class: donate
 ---
+<h1>Support Our Work</h1>
+               <p class="intro"> YEP has created a platform for Ethiopian Professionals to find meaningful connections and the work we have done has inspired, educated and empowered the Ethiopian professional community to make a positive impact in the world. As a donor, you can ensure this work continues.
+Use the buttons below to make your donation today.
+</p>
 <div class="bg-gray overview">
   <section class="sub-navigation">
     <div class="container">
