--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -17,10 +17,10 @@ body_class: donate
         <div class="tab-content">
         <div id="menu1" class="tab-pane fade in active">
           <div class="row margin-top-2">
-          <p class="intro"> YEP has created a platform for Ethiopian Professionals to find meaningful connections and the work we have done has inspired, educated and empowered the Ethiopian professional community to make a positive impact in the world. As a donor, you can ensure this work continues.
-Use the buttons below to make your donation today.</p>
+          <p class="intro"> YEP has created a platform for Ethiopian Professionals to find meaningful connections and the work we have done has inspired, educated and empowered the Ethiopian professional community to make a positive impact in the world. As a donor, you can ensure this work continues.</p>
+<p Use the buttons below to make your donation today.</p>
              </script><iframe src="https://donorbox.org/embed/donate-398" height="685px" width="100%"
- style="max-width:500px; min-width:310px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>
+ style="max-width:1000px; min-width:620px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>
   <p>Your payment is protected through SSL encryption.</p>
      <hr/>
     <p>
@@ -28,13 +28,10 @@ Use the buttons below to make your donation today.</p>
      </p>    
            </div>
             </div>
-             </div>
-              </div>
-                </div>
         <div id="menu2" class="tab-pane fade">
           <div class="row margin-top-2">
             <h1>Interested in Sponsoring YEP?</h1>
-              <p>Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p>
+              <p> Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p> 
                 <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
       </div>              
     </div>
