--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -12,7 +12,7 @@ body_class: donate
     <div class="container">
       <ul class="nav nav-tabs">
         <li class="active"><a data-toggle="tab" href="#menu1">Donate</a></li>
-        <li><a data-toggle="tab" href="#menu2">Sponsorship</a></li>
+        <li><a data-toggle="tab" href="#menu2">Become a Sponsor</a></li>
       </ul>
         <div class="tab-content">
         <div id="menu1" class="tab-pane fade in active">
@@ -30,7 +30,7 @@ body_class: donate
             </div>
         <div id="menu2" class="tab-pane fade">
           <div class="row margin-top-2">
-            <h1>Interested in Sponsoring YEP?</h1>
+            <p>Interested in Sponsoring YEP?</p>
               <p> Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p> 
                 <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
       </div>              
