--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -5,7 +5,7 @@ permalink: /donate/
 body_class: donate
 ---
 <div class="container text-center"> 
-      <h1>Support Our Work</h1>
+      <h2>Support Our Work</h2>
     </div>     
 <div class="bg-gray overview">
   <section class="sub-navigation">
@@ -21,16 +21,20 @@ body_class: donate
 <p Use the buttons below to make your donation today.</p>
              </script><iframe src="https://donorbox.org/embed/donate-398" height="685px" width="100%"
  style="max-width:1000px; min-width:620px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>
-  <p>Your payment is protected through SSL encryption.</p>
+  <div class="well">
+    <p>Your payment is protected through SSL encryption.</p>
+    <hr>
+  <p>YEP is tax exempt under Section 501(C)(3) of the IRS code. All donations are tax deductible per U.S. code using the tax ID number 46-2681571</p>
      <hr/>
-    <p>
-      YEP is tax exempt under Section 501(C)(3) of the IRS code. All donations are tax deductible per U.S. code using the tax ID number 46-2681571
-     </p>    
+    <p>If you prefer to donate by check, please mail your donation to:</p> 
+    <p>YEP</p> 
+<p>901 S Highland St Suite 315 </p> 
+<p>Arlington, VA 22204 </p>  
            </div>
             </div>
         <div id="menu2" class="tab-pane fade">
           <div class="row margin-top-2">
-            <p>Interested in Sponsoring YEP?</p>
+            <h3>Interested in Sponsoring YEP?</h3>
               <p> Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p> 
                 <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
       </div>              
