--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -17,19 +17,16 @@ body_class: donate
         <div class="tab-content">
         <div id="menu1" class="tab-pane fade in active">
           <div class="row margin-top-2">
-          <p class="intro"> YEP has created a platform for Ethiopian Professionals to find meaningful connections and the work we have done has inspired, educated and empowered the Ethiopian professional community to make a positive impact in the world. As a donor, you can ensure this work continues.</p>
-<p> Use the buttons below to make your donation today.</p>
-             </script><iframe src="https://donorbox.org/embed/donate-398" height="685px" width="100%"
- style="max-width:1000px; min-width:620px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>
- 
-  <div class="content">
+           <div class="content">
       <div class="container">
           <div class="row">
                <div class="col-sm-7 col-md-7">
-                    
-       <div class="col-sm-5 col-md-4 col-md-offset-1">
-         <aside class="sidebar">
-                                                                                    
+          <p class="intro"> YEP has created a platform for Ethiopian Professionals to find meaningful connections and the work we have done has inspired, educated and empowered the Ethiopian professional community to make a positive impact in the world. As a donor, you can ensure this work continues.</p>
+<p> Use the buttons below to make your donation today.</p>
+             </script><iframe src="https://donorbox.org/embed/donate-398" height="685px" width="100%"
+ style="max-width:1000px; min-width:620px; max-height:none!important" seamless="seamless" name="donorbox" frameborder="0" scrolling="no" allowpaymentrequest></iframe>          
+       <div class="col-sm-7 col-md-7">
+         <aside class="sidebar">                                                                              
    <div class="well">
     <h2>Mission </h2>
     <p> Your payment is protected through SSL encryption.</p>
