--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -45,6 +45,7 @@ body_class: donate
                   
         <div id="menu2" class="tab-pane fade">
           <div class="row margin-top-2">
+           <div class="content">
             <h3>Interested in Sponsoring YEP?</h3>
               <p> Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p> 
                 <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
