--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -25,12 +25,11 @@ body_class: donate
        <div class="col-sm-7 col-md-7">
          <aside class="sidebar">                                                                              
    <div class="well">
-    <h2>Mission </h2>
-    <p> Your payment is protected through SSL encryption.</p>
+    <h3>Your payment is protected through SSL encryption. </h3>
     <hr>
-    <h2> Vision</h2>
-      <p> YEP is tax exempt under Section 501(C)(3) of the IRS code.</p> 
-      <p> All donations are tax deductible per U.S. code using the tax ID number 46-2681571</p>                              <hr>
+    <h3> YEP is tax exempt under Section 501(C)(3) of the IRS code.</h3>
+     <h3> All donations are tax deductible per U.S. code using the tax ID number 46-2681571 </h3>                              
+     <hr>
      <h2>Check</h2>                          
      <p> If you prefer to donate by check, please mail your donation to:</p>
      <p> Your Ethiopian Professionals Network</p>
