--- a/_pages/sponsor.html
+++ b/_pages/sponsor.html
@@ -1,17 +1,16 @@
 ---
 layout: default
-title: Donate
-permalink: /sponsor/
-body_class: sponsor
+title: Member
+permalink: /join/
+body_class: Join
 ---
  <div class="content">
       <div class="container">
           <div class="row">
                <div class="col-sm-7 col-md-7">
-                  <h1>Interested in Sponsoring YEP?</h1>
-<p>Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p>
-        <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
-                    
+                  <h1>YEP Community</h1>
+<p>Thank you for your interest in becoming a YEP member.</p>
+        <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>                
     </div>
        <div class="col-sm-5 col-md-4 col-md-offset-1">
          <aside class="sidebar">
