--- a/_pages/join.html
+++ b/_pages/join.html
@@ -2,7 +2,7 @@
 layout: default
 title: Member
 permalink: /join/
-body_class: Donate
+body_class: donate
 ---
  <div class="content">
       <div class="container">
