--- a/_pages/volunteer.html
+++ b/_pages/volunteer.html
@@ -2,7 +2,7 @@
 layout: default
 title: Volunteer
 permalink: /volunteer/
-body_class: volunteer
+body_class: donate
 ---
 <div class="content">
       <div class="container">
