--- a/_pages/join.html
+++ b/_pages/join.html
@@ -4,36 +4,22 @@ title: Member
 permalink: /join/
 body_class: donate
 ---
- <div class="content">
-      <div class="container">
-          <div class="row">
-               <div class="col-sm-7 col-md-7">
-                  <h1>YEP Community</h1>
-<p>Thank you for your interest in becoming a YEP member.</p>
-        <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>                
+ <div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h1>Join YEP Today!</h1>
+       <p>Dedicated to mobilizing our members to develop innovative ways of improving our community </p>
+      <h2> Why join YEP? </h2> 
+      <li> YEP aims to serve as a nexus to strengthen our professional and social link within the Ethiopian community.</li>
+      <li> Your membership will give you countless opportunities to engage with the community and network with fellow members.</li>
+      <li> Many of our core offerings are available at no cost to members. You will also have the option to select two buy up options that will give you access to discounts  </li>
+      <h3> Your membership helps YEP </h3>
+      <p> 1. Continue its role as the gathering point for networking and professional development. </p>
+      <p> 2. Understand the key gaps in our community and the steps that can be taken to address them.</p>
+      <h3> Your membership helps YEP </h3>
+      <p> 1. Engage in initiatives tailored to your expertise that will directly impact the community  </p>
+      <p> 2. Grow in your career through mentoring, professional development sessions and networking events. </p>
+      <p> 3. Attend our annual gala that brings together over professionals and community members.</p>
     </div>
-       <div class="col-sm-5 col-md-4 col-md-offset-1">
-         <aside class="sidebar">
-                                                                                    
-   <div class="well">
-    <h2>Mission </h2>
-    <p> Our Mission is to inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
-    <hr>
-    <h2> Vision</h2>
-      <p> Our Vision is to create a strong community that shares ideas, skills and resources to enrich lives.</p>                              <hr>
-      <h2>Our Programs</h2>
-      <li>Career Development </li>
-      <li>Personal and Professional Empowerment </li>
-      <li>Mentorship </li>
-      <li>Recent Arrivals</li>
-      <li>Diaspora and Community Engagement</li>
-    <hr>
-     <h2>Contact</h2>                          
-     <a href="mailto:info@yepnetwork.org">info@yepnetwork.org</a>
- </p>
-      </div>
-          </aside>
-            </div>
-            </div><!-- /.row -->
-            </div><!--/.container-->
-        </div><!-- /.content -->
+  </div>
+</div>
