--- a/programs.html
+++ b/programs.html
@@ -6,18 +6,17 @@ group: navigation
 permalink: /programs/
 body_class: programs
 ---
-<!--<section class="hero" style="background-image: url({{ site.baseurl }}/assets/images/hero/YEP-Gala-Picture.jpeg)">
+<section class="hero" style="background-image: url({{ site.baseurl }}/assets/images/hero/YEP-Gala-Picture.jpeg)">
   <div class="inner">
     <div class="copy">
       <h1>YEP Programs</h1>
     </div>
   </div>
---> </section>
-
+<!--</section>
 <div class="overview">
   <div class="col-sm-12 text-center margin-bottom-4">
     <h2 class="">Our Programs</h2>
-  </div>
+  </div>--> 
   <section class="sub-navigation">
     <div class="container">
       <div class="row">
