--- a/programs.html
+++ b/programs.html
@@ -6,7 +6,8 @@ group: navigation
 permalink: /programs/
 body_class: programs
 ---
-<section class="hero" style="background-image: url({{ site.baseurl }}/assets/images/hero/YEP-Gala-Picture.jpeg)">
+<section class="hero" 
+  <img src="/assets/images/programs/leadership_team_2.jpg">
   <div class="inner">
     <div class="copy">
       <h1>YEP Programs</h1>
