--- a/programs.html
+++ b/programs.html
@@ -6,11 +6,10 @@ group: navigation
 permalink: /programs/
 body_class: programs
 ---
-<section class="hero" 
+<section class="col-sm-12 text-center margin-bottom-4">
   <img src="/assets/images/programs/leadership_team_2.jpg">
   <div class="inner">
-    <div class="copy">
-      <h1>YEP Programs</h1>
+      <h1>YEP_Programs</h1>
     </div>
   </div>
 <!--</section>
