--- a/programs.html
+++ b/programs.html
@@ -7,7 +7,7 @@ permalink: /programs/
 body_class: programs
 ---
 <section class="col-sm-12 text-center margin-bottom-4">
-  <img src="/assets/images/programs/leadership_team_2.jpg">
+  <img src="assets/images/hero/yep_mentorship.png">
   <div class="inner">
       <h1>YEP_Programs</h1>
     </div>
