--- a/programs.html
+++ b/programs.html
@@ -6,10 +6,12 @@ group: navigation
 permalink: /programs/
 body_class: programs
 ---
-<section class="col-sm-12 text-center margin-bottom-4">
-  <div 
-       <img src="assets/images/hero/yep_mentorship.png">
+<section class="hero" style="background-image: url({{ site.baseurl }}/assets/images/hero/YEP-Gala-Picture.jpeg)">
+  <div class="inner">
+    <div class="copy">
+      <h1>YEP Programs</h1>
     </div>
+  </div>
 <!--</section>
 <div class="overview">
   <div class="col-sm-12 text-center margin-bottom-4">
