--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -10,28 +10,41 @@ categories:
       <div class="container">
           <div class="row">
                <div class="col-sm-7 col-md-7">
-<p>Thank you for your interest in becoming a YEP sponsor. Your sponsorship helps to make our programs possible.</p>
-        <p>Please contact info@yepnetwork.org with any sponsoring inquiries.</p>
-                    
+            <p>The Career Development Program provides a platform to help members in their career development journey, from finding and gaining employment through progressing towards individual career goals. YEP organizes various programs and events such as invited speakers series, panel discussions and virtual webcasts on career development topics. We will also organize Resume and Cover Letter writing workshops and mock interview sessions where you can gain valuable individualized feedback. 
+            </p>                
     </div>
        <div class="col-sm-5 col-md-4 col-md-offset-1">
          <aside class="sidebar">
                                                                                     
    <div class="well">
-    <h2>Mission </h2>
-    <p> Our Mission is to inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
+    <h2>Additional Resources </h2>
+         <h3>Quintessential Careers<h3>
+    <p> A career, job, and college site offering free career and job-hunting advice (through articles, tools, tips, samples, and tutorials), as well as serving as a directory of links to all job sites.</p>
+      <a> href= "https://www.livecareer.com/quintessential/" </a>        
     <hr>
-    <h2> Vision</h2>
-      <p> Our Vision is to create a strong community that shares ideas, skills and resources to enrich lives.</p>                              <hr>
-      <h2>Our Programs</h2>
-      <li>Career Development </li>
-      <li>Personal and Professional Empowerment </li>
-      <li>Mentorship </li>
-      <li>Recent Arrivals</li>
-      <li>Diaspora and Community Engagement</li>
+    <h2> The Bureau of Labor Statistics</h2>
+      <p> The official governmental agency responsible for collecting and analyzing occupational information, is a great place to find comprehensive information on occupations and their requirements. You can search occupational information by several different criteria such as education level, wages, job growth etc... The information available on the website is produced and updated every two years.
+</p>     
+  <a> href= "https://www.bls.gov/ooh/" </a>             
+  <hr>
+      <h2>Professional Clothing</h2>
+      <p>Dressing for success doesn’t have to break your bank! There are multiple non-profit organizations in Washington metro area that provide professional clothes and other services such as interview counseling.</p>
+      <a> href= "http://www.successinstyle.org/" </a> 
+      <a> href= "http://www.acdnonline.org/locations/" </a>       
     <hr>
-     <h2>Contact</h2>                          
-     <a href="mailto:info@yepnetwork.org">info@yepnetwork.org</a>
+     <h2>Websites that offer useful tips and guides: </h2>
+               Resume writing: 
+     <a href="http://www.rawresume.com/"</a>
+      <a href=" http://www.resumewritingacademy.com/resume-writer-resources.php"</a>
+                <hr>
+            <h3>Interview preparation:</h3>   
+             <a href="https://www.thebalance.com/practice-interview-tips-and-techniques-2062805"</a>
+              <a href="https://www.monster.com/career-advice/job-interview"</a>
+               <a href="http://myinterviewsimulator.com/"</a>
+            <h3>Researching employers:</h3>   
+             <a href="https://www.glassdoor.com/index.htm"</a>
+              <a href="http://www.vault.com/"</a>
+               <a href="https://www.themuse.com/"</a>
  </p>
       </div>
           </aside>
