--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -25,12 +25,12 @@ categories:
     <h2> The Bureau of Labor Statistics</h2>
       <p> The official governmental agency responsible for collecting and analyzing occupational information, is a great place to find comprehensive information on occupations and their requirements. You can search occupational information by several different criteria such as education level, wages, job growth etc... The information available on the website is produced and updated every two years.
 </p>     
-  <a> href= "https://www.bls.gov/ooh/" </a>             
+  <a href= "https://www.bls.gov/ooh/" </a>             
   <hr>
       <h2>Professional Clothing</h2>
       <p>Dressing for success doesn’t have to break your bank! There are multiple non-profit organizations in Washington metro area that provide professional clothes and other services such as interview counseling.</p>
-      <a> href= "http://www.successinstyle.org/" </a> 
-      <a> href= "http://www.acdnonline.org/locations/" </a>       
+      <a href= "http://www.successinstyle.org/" </a> 
+      <a href= "http://www.acdnonline.org/locations/" </a>       
     <hr>
      <h2>Websites that offer useful tips and guides: </h2>
                Resume writing: 
@@ -45,7 +45,6 @@ categories:
              <a href="https://www.glassdoor.com/index.htm"</a>
               <a href="http://www.vault.com/"</a>
                <a href="https://www.themuse.com/"</a>
- </p>
       </div>
           </aside>
             </div>
