--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -20,7 +20,7 @@ categories:
     <h2>Additional Resources </h2>
          <h3>Quintessential Careers<h3>
     <p> A career, job, and college site offering free career and job-hunting advice (through articles, tools, tips, samples, and tutorials), as well as serving as a directory of links to all job sites.</p>
-      <a> href= "https://www.livecareer.com/quintessential/" </a>        
+      <a href= "https://www.livecareer.com/quintessential/" </a>        
     <hr>
     <h2> The Bureau of Labor Statistics</h2>
       <p> The official governmental agency responsible for collecting and analyzing occupational information, is a great place to find comprehensive information on occupations and their requirements. You can search occupational information by several different criteria such as education level, wages, job growth etc... The information available on the website is produced and updated every two years.
