--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -20,31 +20,31 @@ categories:
     <h2>Additional Resources </h2>
          <h3>Quintessential Careers<h3>
     <p> A career, job, and college site offering free career and job-hunting advice (through articles, tools, tips, samples, and tutorials), as well as serving as a directory of links to all job sites.</p>
-      <a href= "https://www.livecareer.com/quintessential/" </a>        
+     <p>  <a href= "https://www.livecareer.com/quintessential/"> Visit Live Career </a>  </p>       
     <hr>
     <h2> The Bureau of Labor Statistics</h2>
       <p> The official governmental agency responsible for collecting and analyzing occupational information, is a great place to find comprehensive information on occupations and their requirements. You can search occupational information by several different criteria such as education level, wages, job growth etc... The information available on the website is produced and updated every two years.
 </p>     
-  <a href= "https://www.bls.gov/ooh/" </a>             
+  <p> <a href= "https://www.bls.gov/ooh/"> Visit The Bureau of Labor Statistics </a>  </p>            
   <hr>
       <h2>Professional Clothing</h2>
       <p>Dressing for success doesn’t have to break your bank! There are multiple non-profit organizations in Washington metro area that provide professional clothes and other services such as interview counseling.</p>
-      <a href= "http://www.successinstyle.org/" </a> 
-      <a href= "http://www.acdnonline.org/locations/" </a>       
+      <p> <a href= "http://www.successinstyle.org/"> </a> </p> 
+      <p> <a href= "http://www.acdnonline.org/locations/"> </a> </p>       
     <hr>
-     <h2>Websites that offer useful tips and guides: </h2>
+     <h2>Websites that offer useful tips and guides: </h2> </p> 
                Resume writing: 
-     <a href="http://www.rawresume.com/"</a>
-      <a href=" http://www.resumewritingacademy.com/resume-writer-resources.php"</a>
+     <a href="http://www.rawresume.com/"> </a> </p> 
+      <a href=" http://www.resumewritingacademy.com/resume-writer-resources.php"> </a> </p> 
                 <hr>
             <h3>Interview preparation:</h3>   
-             <a href="https://www.thebalance.com/practice-interview-tips-and-techniques-2062805"</a>
-              <a href="https://www.monster.com/career-advice/job-interview"</a>
-               <a href="http://myinterviewsimulator.com/"</a>
+             <p> <a href="https://www.thebalance.com/practice-interview-tips-and-techniques-2062805"> </a> </p> 
+              <p> <a href="https://www.monster.com/career-advice/job-interview"> </a> </p> 
+               <p> <a href="http://myinterviewsimulator.com/"> </a> </p> 
             <h3>Researching employers:</h3>   
-             <a href="https://www.glassdoor.com/index.htm"</a>
-              <a href="http://www.vault.com/"</a>
-               <a href="https://www.themuse.com/"</a>
+             <p><a href="https://www.glassdoor.com/index.htm"> </a> </p> 
+              <p><a href="http://www.vault.com/"> </a> </p> 
+               <p><a href="https://www.themuse.com/"> </a> </p> 
       </div>
           </aside>
             </div>
