--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -20,31 +20,31 @@ categories:
     <h2>Additional Resources </h2>
          <h3>Quintessential Careers<h3>
     <p> A career, job, and college site offering free career and job-hunting advice (through articles, tools, tips, samples, and tutorials), as well as serving as a directory of links to all job sites.</p>
-     <p>  <a href= "https://www.livecareer.com/quintessential/"> Visit Live Career </a>  </p>       
+     <p>  <a href= "https://www.livecareer.com/quintessential/"> For more info visit Live Career </a>  </p>       
     <hr>
     <h2> The Bureau of Labor Statistics</h2>
       <p> The official governmental agency responsible for collecting and analyzing occupational information, is a great place to find comprehensive information on occupations and their requirements. You can search occupational information by several different criteria such as education level, wages, job growth etc... The information available on the website is produced and updated every two years.
 </p>     
-  <p> <a href= "https://www.bls.gov/ooh/"> Visit The Bureau of Labor Statistics </a>  </p>            
+  <p> <a href= "https://www.bls.gov/ooh/"> For more info visit The Bureau of Labor Statistics </a>  </p>            
   <hr>
       <h2>Professional Clothing</h2>
       <p>Dressing for success doesn’t have to break your bank! There are multiple non-profit organizations in Washington metro area that provide professional clothes and other services such as interview counseling.</p>
-      <p> <a href= "http://www.successinstyle.org/"> </a> </p> 
-      <p> <a href= "http://www.acdnonline.org/locations/"> </a> </p>       
+      <p> <a href= "http://www.successinstyle.org/"> For more info visit Success In Style for more info </a> </p> 
+      <p> <a href= "http://www.acdnonline.org/locations/"> For more info visit ACD Online </a> </p>       
     <hr>
      <h2>Websites that offer useful tips and guides: </h2> </p> 
                Resume writing: 
-     <a href="http://www.rawresume.com/"> </a> </p> 
-      <a href=" http://www.resumewritingacademy.com/resume-writer-resources.php"> </a> </p> 
+     <a href="http://www.rawresume.com/"> For more info visit Raw Resume </a> </p> 
+      <a href=" http://www.resumewritingacademy.com/resume-writer-resources.php"> For more info visit Resume Writing Academy</a> </p> 
                 <hr>
             <h3>Interview preparation:</h3>   
-             <p> <a href="https://www.thebalance.com/practice-interview-tips-and-techniques-2062805"> </a> </p> 
-              <p> <a href="https://www.monster.com/career-advice/job-interview"> </a> </p> 
-               <p> <a href="http://myinterviewsimulator.com/"> </a> </p> 
+             <p> <a href="https://www.thebalance.com/practice-interview-tips-and-techniques-2062805"> For more info visit the balance </a> </p> 
+              <p> <a href="https://www.monster.com/career-advice/job-interview"> For more info visit Monster </a> </p> 
+               <p> <a href="http://myinterviewsimulator.com/"> For more info visit My interview Simulator </a> </p> 
             <h3>Researching employers:</h3>   
-             <p><a href="https://www.glassdoor.com/index.htm"> </a> </p> 
-              <p><a href="http://www.vault.com/"> </a> </p> 
-               <p><a href="https://www.themuse.com/"> </a> </p> 
+             <p><a href="https://www.glassdoor.com/index.htm"> For more info visit Glass Door </a> </p> 
+              <p><a href="http://www.vault.com/"> For more info visit Vault </a> </p> 
+               <p><a href="https://www.themuse.com/"> For more info visit The Muse</a> </p> 
       </div>
           </aside>
             </div>
