--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -11,7 +11,21 @@ categories:
           <div class="row">
                <div class="col-sm-7 col-md-7">
             <p>The Career Development Program provides a platform to help members in their career development journey, from finding and gaining employment through progressing towards individual career goals. YEP organizes various programs and events such as invited speakers series, panel discussions and virtual webcasts on career development topics. We will also organize Resume and Cover Letter writing workshops and mock interview sessions where you can gain valuable individualized feedback. 
-            </p>                
+            </p>   
+   <h2>Websites that offer useful tips and guides: </h2>  
+               <h3>Resume writing:</h2> 
+   <p>  <a href="http://www.rawresume.com/"> For more info visit Raw Resume </a> </p> 
+    <p>  <a href=" http://www.resumewritingacademy.com/resume-writer-resources.php"> For more info visit Resume Writing Academy</a> </p> 
+                <hr>
+            <h3>Interview preparation:</h3>   
+             <p> <a href="https://www.thebalance.com/practice-interview-tips-and-techniques-2062805"> For more info visit the balance </a> </p> 
+              <p> <a href="https://www.monster.com/career-advice/job-interview"> For more info visit Monster </a> </p> 
+               <p> <a href="http://myinterviewsimulator.com/"> For more info visit My interview Simulator </a> </p> 
+               
+            <h3>Researching employers:</h3>   
+             <p><a href="https://www.glassdoor.com/index.htm"> For more info visit Glass Door </a> </p> 
+              <p><a href="http://www.vault.com/"> For more info visit Vault </a> </p> 
+               <p><a href="https://www.themuse.com/"> For more info visit The Muse</a> </p>                    
     </div>
        <div class="col-sm-5 col-md-4 col-md-offset-1">
          <aside class="sidebar">
@@ -31,20 +45,6 @@ categories:
       <p>Dressing for success doesn’t have to break your bank! There are multiple non-profit organizations in Washington metro area that provide professional clothes and other services such as interview counseling.</p>
       <p> <a href= "http://www.successinstyle.org/"> For more info visit Success In Style for more info </a> </p> 
       <p> <a href= "http://www.acdnonline.org/locations/"> For more info visit ACD Online </a> </p>       
-    <hr>
-     <h2>Websites that offer useful tips and guides: </h2> </p> 
-               Resume writing: 
-     <a href="http://www.rawresume.com/"> For more info visit Raw Resume </a> </p> 
-      <a href=" http://www.resumewritingacademy.com/resume-writer-resources.php"> For more info visit Resume Writing Academy</a> </p> 
-                <hr>
-            <h3>Interview preparation:</h3>   
-             <p> <a href="https://www.thebalance.com/practice-interview-tips-and-techniques-2062805"> For more info visit the balance </a> </p> 
-              <p> <a href="https://www.monster.com/career-advice/job-interview"> For more info visit Monster </a> </p> 
-               <p> <a href="http://myinterviewsimulator.com/"> For more info visit My interview Simulator </a> </p> 
-            <h3>Researching employers:</h3>   
-             <p><a href="https://www.glassdoor.com/index.htm"> For more info visit Glass Door </a> </p> 
-              <p><a href="http://www.vault.com/"> For more info visit Vault </a> </p> 
-               <p><a href="https://www.themuse.com/"> For more info visit The Muse</a> </p> 
       </div>
           </aside>
             </div>
