--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -10,6 +10,9 @@ categories:
       <div class="container">
           <div class="row">
                <div class="col-sm-7 col-md-7">
+                    <head>
+  <title>Career Development</title>
+                    </head> 
             <p>The Career Development Program provides a platform to help members in their career development journey, from finding and gaining employment through progressing towards individual career goals. YEP organizes various programs and events such as invited speakers series, panel discussions and virtual webcasts on career development topics. We will also organize Resume and Cover Letter writing workshops and mock interview sessions where you can gain valuable individualized feedback. 
             </p>   
    <h2>Websites that offer useful tips and guides: </h2>  
