--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -1,4 +1,11 @@
-
+---
+layout: program
+title: Career Development
+img: career-development.jpg
+description: Tools and resources to sharpen members’ knowledge and skills. 
+categories:
+- programs
+---
 <div class="content">
       <div class="container">
           <div class="row">
