Removed gray bg.

--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -7,7 +7,7 @@ body_class: donate
 <div class="container text-center"> 
       <h2>Support Our Work</h2>
     </div>     
-<div class="bg-gray overview">
+<div class="overview">
   <section class="sub-navigation">
     <div class="container">
       <ul class="nav nav-tabs">
